# bluego-esp32

./: .gitignore  CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.old
components/lvgl__lvgl/: .component_hash  idf_component.yml
main/: CMakeLists.txt  IMU.c  IMU.h  air-mouse.c  ble_go_main.c  ble_hidd_demo_main.c  bluego_main.c  epaper_display.c  epaper_display.h  esp_hidd_prf_api.c  esp_hidd_prf_api.h  function_btn.c  function_btn.h  gesture.c  hid_dev.c  hid_dev.h  hid_device_le_prf.c  hid_touch_gestures.c  hid_touch_gestures.h  hidd_le_prf_int.h  idf_component.yml  image_data.c  image_data.h  image_display.c  image_display.h  img_air_mouse.c  img_connected.c  img_custom1.c  img_custom2.c  img_disconnected.c  img_gesture.c  img_trackball.c  mode_mangement_ui.c  mode_mangement_ui.h  mode_setting_ui.c  mode_setting_ui.h  mpu6500.c  mpu6500.h  operations.c  operations.h  (+4 more)
